--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,7 @@
 		  <li> <a href="">Contact</a></li>
 		  <li> <a href="">About</a></li>
 	  </ul>
+	  <div></div>
 	  <div>
 		<p>content is here, lorem ipsum dooby dooby doo</p>
 		<p>content is here, lorem ipsum dooby dooby doo</p>
